--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -8,9 +8,11 @@
   with_items:
   - libselinux-python
   - bind-utils
+  - traceroute
+  - wget
 
 - name: Copy root cert
-  copy: content={{aptinfo_root_pem_cert}}
+  copy: content={{aptinfo_root_pem_cert}} mode=0644
     dest=/etc/pki/ca-trust/source/anchors/aptinfo-root.pem
   notify: [update-ca-trust]
 
@@ -19,5 +21,5 @@
     mode=0750 owner=nobody group=root
 
 - name: Add DNS IP script to cron
-  cron: name="Tell ip" minute="*/10" user=nobody
+  cron: name="Tell ip" minute="*/5" user=nobody
     job="sh /usr/local/bin/tell_my_ip.sh &>/dev/null"
