--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -7,6 +7,7 @@
   yum: name={{ item }} state=present
   with_items:
   - libselinux-python
+  - epel-release
   - bind-utils
   - traceroute
   - wget
