--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,8 +1,5 @@
 ---
 
-#- name: Debug
-#  debug: var=test_var
-
 - name: Install common pkgs
   yum: name={{ item }}
   with_items:
@@ -12,6 +9,9 @@
   - traceroute
   - logwatch
   - wget
+
+- name: Disable set-hostname
+  command: scarletctl disable set-hostname
 
 - name: Install Cron
   yum: name=cronie
