Added docker and swap

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -42,7 +42,10 @@
   shell: "newaliases"
   ignore_errors: yes
 
-- name: debug
-  template: src=vars.j2 dest=/root/debug.txt
+#- name: debug
+#  template: src=vars.j2 dest=/root/debug.txt
+
+- name: set hostname
+  template: src=hostname.j2 dest=/etc/hostname backup=yes
   
 
