--- a/common.yml
+++ b/common.yml
@@ -1,10 +1,11 @@
 ---
 
 - hosts: all
-  become: true
+  remote_user: root
   roles:
   - common
   - users
+  #become: true
 
 - hosts: docker
   remote_user: root
