--- a/roles/users/tasks/main.yml
+++ b/roles/users/tasks/main.yml
@@ -6,11 +6,15 @@
 - name: Ruslan
   user:
     name: ruslan
+    groups: docker
+    home: /home/ruslan
     password: "{{ ruslan_shadow }}"
     shell: /bin/bash
-    groups: docker
 
 - name: Ssh key ruslan
   authorized_key:
     user: ruslan
     key: https://raw.githubusercontent.com/ruslan2k/public-files/master/docker/centos-ssh/id_rsa.pub
+
+- name: Add id_rsa
+  template: src=id_rsa dest=/home/ruslan/.ssh/id_rsa
