--- a/roles/development/tasks/main.yml
+++ b/roles/development/tasks/main.yml
@@ -7,6 +7,7 @@
   - xorg-x11-fonts-Type1  # virtual box
   - xorg-x11-fonts-misc   # xterm
   - vim-enhanced
+  - python34
   - screen
   - strace
   - tmux
