--- a/roles/users/tasks/main.yml
+++ b/roles/users/tasks/main.yml
@@ -1,7 +1,8 @@
 ---
 
-- name: Add docker group
-  group: name=docker
+- name: Add Docker group
+  group:
+    name: docker
 
 - name: Ruslan
   user:
