--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -4,7 +4,7 @@
   package: name={{ item }}
   with_items:
   - bind-utils
-  - cron
+  - cronie
   - traceroute
   - epel-release
   - libselinux-python
