Install python 2 for bare ubuntu

--- a/common.yml
+++ b/common.yml
@@ -2,6 +2,11 @@
 
 - hosts: all
   remote_user: root
+  gather_facts: False
+  pre_tasks:
+    - raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
+    - setup: # aka gather_facts
+
   roles:
   - common
   - users
