Fixed distribution condition

--- a/roles/development/tasks/main.yml
+++ b/roles/development/tasks/main.yml
@@ -12,6 +12,7 @@
   - strace
   - tmux
   - git
+  when: ansible_distribution == "CentOS"
 
 - name: Add VirtualBox repo
   yum: name={{ item }} state=present
