--- a/common.yml
+++ b/common.yml
@@ -3,9 +3,10 @@
 - hosts: all
   remote_user: root
   gather_facts: False
-  pre_tasks:
-    - raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
-    - setup: # aka gather_facts
+  become: true
+  # pre_tasks:
+  #   - raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
+  #   - setup: # aka gather_facts
 
   roles:
   - common
